[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Trap-Z/Trap-Z.gd" type="Script" id=1]
[ext_resource path="res://Resouces/Particles/effect9.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.8646, 22.3439 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.26031, 5.19407 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.396552, 0.551136 ), 0.0, 0.0, 0, 0, Vector2( 0.827586, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.18543, 0.97351, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.0569106, 0.0569106, 0.0569106, 0.0569106, 0, 0, 0, 0 )

[node name="Trap-Z" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( -0.00880527, 0.634375 )
scale = Vector2( 0.495523, 0.610574 )
color = Color( 0.192157, 0.972549, 0.843137, 1 )
polygon = PoolVector2Array( -13.2623, -9.80962, -13.0639, 9.43762, 13.1282, 9.63605, 13.2274, -9.61119 )

[node name="FireRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireRange"]
shape = SubResource( 1 )

[node name="ActivationRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationRange"]
shape = SubResource( 2 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 90
lifetime = 0.8
one_shot = true
speed_scale = 0.0
explosiveness = 0.77
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 24, 14 )
direction = Vector2( 30, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
radial_accel = -39.78
damping = 74.55
angle = 233.0
angle_random = 1.0
scale_amount = 0.07
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="body_entered" from="ActivationRange" to="." method="_on_ActivationRange_body_entered"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
